--- a/src/pages/dyn/celestial_velocities.astro
+++ b/src/pages/dyn/celestial_velocities.astro
@@ -219,13 +219,13 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
 
   <p>
     As we can see above, the Earth rotates one more sidereal day
-    each year than solar days. This means:
+    each year than solar days. This means the following equation is true.
   </p>
   <p>
     <DisplayEquation equation="\\text{1 solar year} = \\text{365 solar days}= \\text{366 sidereal days}" />
   </p>
   <p>
-    and so:
+    So, the following equation is also true.
   </p>
   <p>
     <DisplayEquation equation="\\begin{aligned}\\text{sidereal day} &amp;= \\frac{365}{366}\\ \\text{solar day} \\\\&amp;= \\frac{365}{366} \\times 24\\ {\\rm h} \\\\&amp;= 23.93{\\rm\\ h} \\\\&amp;= 23{\\rm\\ h}\\ 56{\\rm\\ min}\\end{aligned}" /> 
@@ -280,7 +280,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
       <p class=mb-0>
         In common usage the word “year” refers to the tropical
         year, as the seasons have historically been more important
-        for people than the motion of the stars. Observe that:
+        for people than the motion of the stars. Observe the following equation.
       </p>
         <div style="font-size: 1rem;">
           <DisplayEquation equation="365.242 \\approx 365 + \\frac{1}{4} - \\frac{1}{100} + \\frac{1}{400}" />
