--- a/src/pages/dyn/track_transition_curves.astro
+++ b/src/pages/dyn/track_transition_curves.astro
@@ -324,7 +324,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
       shown. Then <InlineEquation equation="\\dot{\\theta}" /> can be found by considering
       two expressions for the acceleration. First, from the tangential/normal acceleration
       formula, we have the following equation. <DisplayEquation equation=" \\vec{a} = \\ddot{s} \\, \\hat{e}_t +      \\kappa v^2 \\, \\hat{e}_n = \\alpha s v^2 \\, \\hat{e}_n " />
-      where we used the fact that <InlineEquation equation="\\ddot{s} = \\dot{v} = 0" />
+      We used the fact that <InlineEquation equation="\\ddot{s} = \\dot{v} = 0" />
       (constant speed) and that <InlineEquation equation="\\kappa = \\alpha s " /> for some
       constant \(\alpha\) (the definition of the Euler spiral is
       that curvature is a linear function of distance \(s\)).
