--- a/src/pages/dyn/rigid_body_kinetics.astro
+++ b/src/pages/dyn/rigid_body_kinetics.astro
@@ -60,19 +60,6 @@ import Row from "../../components/Row.astro"
 <SubSection title="Center of mass (COM)" id="center_of_mass">
 
         
-<CalloutContainer slot="cards">
-<CalloutCard title="Application Alert!">
-<p>
-<a href="/dyn/capsizing_ships">Ship stability</a> uses <strong> Center of mass </strong> by ensuring the centers of gravity and bouyancy are in proper locations
-to avoid capsizing when out at sea.
-</p>
-<p>
-    <Image alt = "The MV Golden Ray" src = "/dyn/the_capsizing_ship/Capsized_ship.jpg" width = 5> The MV Golden Ray</Image>
-
-    In 2019, center of gravity and bouyancy calculations were done incorrectly, resulting in the MV Golden Ray to capsize just off the coast of Brunswick, Georgia.  
-</p>
-</CalloutCard>
-</CalloutContainer>
 
 
 
@@ -301,6 +288,15 @@ to avoid capsizing when out at sea.
             <Image src = "/dyn/rigid_body_kinetics/avb_09A186_small.jpg" width = "7"/>
             <p>
                 Rigid body kinetics can be used to analyze how vehicles move along banks.
+            </p>
+        </CalloutCard>
+        <CalloutCard title="Application Alert!">
+            <p>
+                <a href = "/dyn/capsizing_ships">Ship stability</a> uses <strong> Center of mass </strong> by ensuring the centers of gravity and bouyancy are in proper locations to avoid capsizing when out at sea.
+            </p>
+            <p>
+                <Image alt = "The MV Golden Ray" src = "/dyn/the_capsizing_ship/Capsized_ship.jpg" width = 5> The MV Golden Ray</Image>
+                In 2019, center of gravity and bouyancy calculations were done incorrectly, resulting in the MV Golden Ray to capsize just off the coast of Brunswick, Georgia.  
             </p>
         </CalloutCard>
     </CalloutContainer>
