adds apps to drop down menus

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -375,6 +375,12 @@ const path = Astro.url.pathname;
                             <li><a href="/sta/virtual_work?origin=sidebar">Virtual work</a></li>
                         </ol>
                     </section>
+                    <section class = "tile menu white-box col">
+                    <h2><a href = "/sta" aria-label = "About">Applications</a></h2>
+                        <ol style = "column-fill: balance;" class = "course-menu statics-menu">
+                            <li><a href = "/sta/track_and_field_starting_blocks?origin=sidebar">Track and field starting blocks</a></li>
+                        </ol>
+                    </section>
                 </div>
             </li>
             <li class="dropdown mega nav-item " class-value="dyn">
@@ -394,6 +400,20 @@ const path = Astro.url.pathname;
                                     <li><a href="/dyn/rigid_body_kinetics?origin=sidebar">Rigid body kinetics</a></li>
                                     <li><a href="/dyn/contact_and_rolling?origin=sidebar">Contact And rolling</a></li>
                                     <li><a href="/dyn/work_and_energy?origin=sidebar">Work and energy</a></li>
+                                </ol>
+                        </section>
+                        <section class = "tile menu white-box col">
+                            <h2><a href = "/dyn" aria-label = "About">Applications</a></h2>
+                                <ol style = "column-fill: balance-all;" class = "course-menu dynamics-menu">
+                                    <li><a href = "/dyn/shortest_flight_paths?origin=sidebar">Shortest flight paths</a></li>
+                                    <li><a href = "/dyn/track_transition_curves?origin=sidebar">Track transition curves</a></li>
+                                    <li><a href = "/dyn/projectiles_with_air_resistance?origin=sidebar">Projectiles with air resistance</a></li>
+                                    <li><a href = "/dyn/celestial_velocities?origin=sidebar">Celestial velocities</a></li>
+                                    <li><a href = "/dyn/accelerating_and_braking?origin=sidebar">Accelerating and braking</a></li>
+                                    <li><a href = "/dyn/banked_turns?origin=sidebar">Banked turns</a></li>
+                                    <li><a href = "/dyn/steering_geometry?origin=sidebar">Steering geometry</a></li>
+                                    <li><a href = "/dyn/four_bar_linkages?origin=sidebar">Four-bar linkages</a></li>
+                                    <li><a href = "/dyn/capsizing_ships?origin=sidebar">Capsizing ships</a></li>
                                 </ol>
                         </section>
                     </div>
