--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -369,9 +369,8 @@ const path = Astro.url.pathname;
                             <li><a href="/sta/frames_and_machines?origin=sidebar">Frames and machines</a></li>
                             <li><a href="/sta/internal_forces?origin=sidebar">Internal forces</a></li>
                             <li><a href="/sta/friction?origin=sidebar">Friction</a></li>
-                            <li><a href="/sta/centers_of_mass?origin=sidebar">Center of mass</a></li>
+                            <li><a href="/sta/geometric_properties?origin=sidebar">Geometric properties</a></li>
                             <li><a href="/sta/hydrostatic_fluid_pressure?origin=sidebar">Hydrostatic fluid pressure</a></li>
-                            <li><a href="/sta/moment_of_inertia?origin=sidebar">Moment of inertia</a></li>
                             <li><a href="/sta/virtual_work?origin=sidebar">Virtual work</a></li>
                         </ol>
                     </section>
