--- a/src/pages/sta/free_body_diagrams.astro
+++ b/src/pages/sta/free_body_diagrams.astro
@@ -16,6 +16,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
 
   <div slot="navtree">
     <ul class='list-group list-group-flush py-0'> 
+      <li class = 'list-group-item py-0'><a class = 'text-decoration-none subsection' href = '#vector_representation_in_fbds'>Vector representation in FBDs</a></li> 
       <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#pulley_idealizations'>Pulley idealizations</a></li> 
       <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#spring_idealizations'>Spring idealizations</a></li>
       <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#smooth_surface_idealizations'>Smooth surface idealizations</a></li>
@@ -68,6 +69,8 @@ import DisplayTable from "../../components/DisplayTable.astro"
 
 
 </Section>
+
+<SubSection title = "Vector representation in FBDs" id = "vector_representation_in_fbds"/>
 
 <SubSection title="Pulley idealizations" id="pulley_idealizations">
 
