--- a/src/pages/sta/introduction.astro
+++ b/src/pages/sta/introduction.astro
@@ -15,6 +15,8 @@ import DisplayTable from "../../components/DisplayTable.astro"
 
 <div slot="navtree">
     <ul class='list-group list-group-flush py-0'> 
+        <li class = 'list-group-item py-0'><a class = 'text-decoration-none subsection' href = '#what_is_statics'>What is statics?</a></li>
+        <li class = 'list-group-item py-0'><a class = 'text-decoration-none subsection' href = '#assumptions_in_statics'>Assumptions in statics</a></li>
         <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#newtons_laws'>Newton's laws</a>
             <ul class='list-group list-group-flush py-0'> 
                 <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#newtons_mass_and_energy_balances'>Newton's first law</a></li> 
@@ -33,6 +35,10 @@ import DisplayTable from "../../components/DisplayTable.astro"
 </div>
 
 <Section title="Introduction to statics" id="introduction_to_statics"></Section>
+
+<SubSection title = "What is statics?" id = "what_is_statics"/>
+
+<SubSection title = "Assumptions in statics" id = "assumptions_in_statics"/>
 
 <SubSection title="Newton's laws" id="newtons_laws">
 
