--- a/src/pages/sta.astro
+++ b/src/pages/sta.astro
@@ -44,9 +44,8 @@ import "../../public/static/css/course_home_pages.css"
       <li><a href="/sta/frames_and_machines?origin=coursemenu">Frames and machines</a></li>
       <li><a href="/sta/internal_forces?origin=coursemenu">Internal forces</a></li>
       <li><a href="/sta/friction?origin=coursemenu">Friction</a></li>
-      <li><a href="/sta/centers_of_mass?origin=coursemenu">Center of mass</a></li>
+      <li><a href="/sta/geometric_properties?origin=coursemenu">Geometric properties</a></li>
       <li><a href="/sta/hydrostatic_fluid_pressure?origin=coursemenu">Hydrostatic fluid pressure</a></li>
-      <li><a href="/sta/moment_of_inertia?origin=coursemenu">Moment of inertia</a></li>
       <li><a href="/sta/virtual_work?origin=coursemenu">Virtual work</a></li>
     </ol>
   </section>
