Updated pure shear diagrams

--- a/src/pages/sol/stress_transformation.astro
+++ b/src/pages/sol/stress_transformation.astro
@@ -185,10 +185,6 @@ The general state of stress at a point is characterized by three independent nor
 <DisplayEquation equation="\\sigma_{x}' + \\sigma_{y}' = \\sigma_{x} + \\sigma_{y}" />
  </DisplayEquation>
 
-Normal and shear stresses can be shown graphically as a function of <InlineEquation equation="\\theta" /> to  see how they overlap. 
-
-<Image src="/sol/stress_transformation/normalShearStressRelation.png" width="4">Stresses based on the transformation angle chosen.</Image>
-
 </SubSubSection>
 
 <SubSubSection title="Principal Stresses" id="principal-stresses">
@@ -286,7 +282,7 @@ Normal and shear stresses can be shown graphically as a function of <InlineEquat
   <DisplayEquation equation="\\begin{align} \\rm\\tan(2\\theta_{s1}) = \\frac{\\sigma_x - \\sigma_y}{2\\tau_{xy}} \\\\ = \\frac{0-0}{2\\tau_{max}} \\\\ 2\\theta_{s1} = 0^\\circ, 180^\\circ \\\\ \\theta_{s1} = 0^\\circ \\\\ \\theta_{s2} = \\pm 90^\\circ \\end{align}"/>
 
   
-  <Image src="/sol/stress_transformation/Max Stress.png" width="6"></Image>
+  <Image src="/sol/stress_transformation/Max Stress_FIXED.jpg" width="6"></Image>
 
  Maximum normal stress at 45 degrees.
 
@@ -297,6 +293,10 @@ Normal and shear stresses can be shown graphically as a function of <InlineEquat
 
 
 </DisplayEquation>
+
+Normal and shear stresses can be shown graphically as a function of <InlineEquation equation="\\theta" /> to  see how they overlap. 
+
+<Image src="/sol/stress_transformation/normalShearStressRelation_FIXED.jpg" width="4">Stresses based on the transformation angle chosen.</Image>
 
 </SubSubSection>
 
